# FounderGraph-Lab

./: .dockerignore  .env.example  .gitignore  ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GRAPHRAG_UPGRADE_PLAN.md  LICENSE  MULTI_AGENT_GUIDELINES.md  Makefile  README.md  SECURITY.md  STEP_BY_STEP_USER_GUIDE.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/mcp/: __init__.py  discovery_server.py  neo4j_server.py  qdrant_server.py
app/models/: __init__.py  audit.py  document.py  entity.py  (+1 more)
sample_data/: business_plan.md  contradictory_interview.md  contradictory_pitch.md  customer_interview_academic_lab_01.docx  customer_interview_cro_01.docx  financial_assumptions.csv  pitch_deck_text.md  technical_roadmap.md
scripts/: backfill_entity_embeddings.py  export_google_drive_folder.py  generate_ontology_artifacts.py  init_ontology.py  load_contradictory_demo.py  reset_demo_state.py
tests/: conftest.py  test_bi_temporal.py  test_citation_verifier.py  test_community_service.py  test_cypher_planner.py  test_discovery_queries.py  test_end_to_end_pipeline.py  test_entity_resolver.py  test_entity_schema.py  test_export_service.py  test_extractors.py  test_hybrid_retriever.py  test_linkml.py  test_markdown_converter.py  test_mcp_servers.py  test_neo4j_service.py  test_ontology_service.py  test_ontology_validator.py  test_qdrant_service.py  test_shacl_gate.py  test_vector_index.py
(+71 files in other folders)
