[project]
name = "foundergraph-lab"
version = "0.1.0"
description = "Local-first, human-in-the-loop Streamlit app that converts startup documents into a validated Neo4j knowledge graph"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Damien Huzard" }]
requires-python = ">=3.11"
keywords = ["knowledge-graph", "neo4j", "llm", "startup", "streamlit", "human-in-the-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
